Default to all content types for global search